# zeroH

./: .gitignore  README.md  pyproject.toml
examples/: conversation_quickstart.py  plugin_quickstart.py  quickstart.py
src/zeroh/: __init__.py  __main__.py  cli.py  embeddings.py  models.py  plugin.py  text.py
src/zeroh/agent/: __init__.py  agent.py
src/zeroh/grounding/: __init__.py  verifier.py
src/zeroh/hallucination/: __init__.py  detector.py
src/zeroh/llm/: __init__.py  base.py  providers.py
src/zeroh/memory/: __init__.py  compression.py  context.py  conversation.py  indexes.py  ingest.py  store.py  tiered.py
src/zeroh/optimization/: __init__.py  batch.py  cache.py  metrics.py
src/zeroh/reasoning/: __init__.py  entities.py  query_expansion.py  relations.py
src/zeroh/retrieval/: __init__.py  retriever.py
tests/: test_agent.py  test_cli.py  test_context_and_reasoning.py  test_conversation.py  test_embeddings.py  test_hallucination.py  test_ingest.py  test_llm.py  test_llm_retry.py  test_memory_modules.py  test_memory_store.py  test_optimization.py  test_optimization_modules.py  test_plugin.py  test_plugin_extras.py  test_retrieval.py  test_retrieval_ranking.py  test_store_extras.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/python/: zeroh_bridge.py
vscode-extension/src/: bridge.ts  extension.ts
